--- a/style/css.css
+++ b/style/css.css
@@ -7,7 +7,7 @@ html {
   scroll-behavior: smooth;
 }
 :root {
-  --light-blue-color: #00ffc3;
+  --light-blue-color: #00eeff;
   --light-gray: #e6e6e6;
   --dark-gray: #7e7e80;
   --black: #1c1c1c;
@@ -288,8 +288,9 @@ video {
     flex-direction: row;
     bottom: 0;
     top: auto;
-    padding: 0.5em;
+    padding: 0.5em 1em;
     align-items: center;
+    justify-content: center;
     transform: none;
   }
   .side-nav .logo::after {
@@ -298,6 +299,17 @@ video {
     color: var(--white);
     display: var(--pseudo-display);
   }
+  #home:hover::before,
+  #aboutMe:hover::before,
+  #skills:hover::before,
+  #education:hover::before,
+  #tCourese:hover::before,
+  #services:hover::before,
+  #lastProjects:hover::before,
+  #contactMe:hover::before {
+    display: none;
+  }
+
   .side-nav .logo::after {
     font-size: 0.7em;
   }
